support advanced search and full text search
